DSND-3114: Address further code smells
* remove uneccesary variables
* rename variables to conform to convention